Incluído o log para requisições não autorizadas